<resources>
    <string name="app_name">Nicolinska</string>
    <string name="nicolinska">Николинская</string>
    <string name="summa">Сумма: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
    <b> Питьевая вода «Миколiнська» </b> \n
    Уже не требуется доказывать, что для питьевых целей следует использовать только достаточно очищенную воду. Но какую воду можно считать таковой? По-видимому, чистой может быть только дистиллированная вода и вода, полученная на фильтрах, работающих по принципу обратного осмоса. В такой воде уже нет не только нерастворимых взвесей, но нет практически и никаких растворимых солей. Возможно, что именно такой и должна быть питьевая вода. А для уверенного ответа на вопрос — какая же должна быть питьевая вода — нам следует обратиться за помощью к природе. И вот что мы видим в тех географических районах, где относительно много долгожителей. Оказывается, причиной и хорошего здоровья, и долголетия в этих районах является местная природная вода, содержащая очень мало ионов кальция — до 20 мг/л. Это мягкая вода, и она легко всасывается в организме и легко очищает его. Но имеется и один недостаток таких мягких вод — они легко выводят из организма ионы калия и натрия. И если с натрием у нас нет проблем — скорее всего мы потребляем поваренную соль в избытке, то калий может вымыться в опасном для организма количестве. И это обстоятельство тоже имеет место в районах долгожительства, и местные жители любыми путями стараются восполнять потери калия.\n
    Новая питьевая вода «Николинская» (а по-украински — «Миколінська») готовится по принципу природной воды в районах долгожительства. Исходная вода пропускается через установку обратного осмоса, которая дает нам действительно чистую воду. Затем в эту воду вводятся высокоочищенные сульфатные соли калия, магния, цинка и марганца. Получается вода со следующим ионным составом (в мг/л): К+ — 80-100 мг/л; Mg2+ — 24-30 мг/л; Zn2+ — 2,0-4,5 мг/л; Mn2+ — 0,04-0,09 мг/л; SO42- ≤250 мг/л.\n
    Кроме того, питьевая вода должна иметь кислую реакцию, и данная вода имеет рН=6,5.\n
    Калий — это важнейший внутриклеточный элемент, активатор функций ряда ферментов. Он необходим для деятельности мышц, в том числе миокарда, работы нейроэндокринной системы. Ионы калия поддерживают автоматизм сердечной деятельности и при их недостатке наблюдаются боли в сердце.\n
    Магний — это тоже внутриклеточный элемент. Дефицит магния ведет к развитию заболеваний сердечно-сосудистой системы, гипертонической болезни, повышает риск онкологических заболеваний.\n
    По принятой в курортологии классификации, питьевая вода «Николинская» относится к сульфатным водам.\n
    Сульфатный анион (SO42-) способствует пищеварению. Много такого аниона (сульфатного) в воде Карловых Вар, но эти воды на Украине почему-то вообще не продаются.\n
    Вот такая питьевая вода в настоящее время и производится в Одессе, и это реальная и обоснованная вода. И каждому из нас остается только решить для себя один вопрос — пить или не пить такую воду? Эта вода запатентована. Товарное ее название — «Николинская» (а по-украински — «Миколінська»).\n
  </string>
    <string name="quantity">Количество</string>
    <string name="tara">Возвратная тара</string>
    <string name="address">Адрес</string>
    <string name="summa_order">Сумма Вашего заказа:</string>
    <string name="books">Книги</string>
    <string name="little_battle">Малотарка</string>
    <string name="uah">грн</string>
    <string name="phone">Телефон</string>
    <string name="name">Имя</string>
    <string name="pompa">помпа</string>
    <string name="choose">"Выбрано: "</string>
    <string name="info_to_order">Информация о заказе</string>
    <string name="to_order">Заказать</string>
    <string name="order">Заказ</string>
    <string name="products">Продукция</string>
    <string name="about_us">О нас</string>
    <string name="programms">О программе</string>
    <string name="contacts">Контакты</string>
    <string name="goods">Товары</string>
    <string name="error">Произошла ошибка!!!</string>
    <string name="you_order_completed">Ваш заказ успешно отправлен!</string>
    <string name="email_sending">*если Вы указали e-mail, то подтверждение придёт к Вам на почту.</string>
    <string name="ok">OK</string>
    <string name="error_repeat">Произошла ошибка!!! \n Проверьте подключение к интернету и попробуйте ещё раз отправить.</string>

    <string-array name="custom_months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>


    <string-array name="custom_weekdays">
        <item>ВС</item>
        <item>ПН</item>
        <item>ВТ</item>
        <item>СР</item>
        <item>ЧТ</item>
        <item>ПТ</item>
        <item>СБ</item>
    </string-array>

    <string-array name="custom_weekdays_full">
        <item>Воскресение</item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>
</resources>
